# mockbase

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
fakegen/: fakegen.py
sql/: _setup.sql  create_user.sql  insert.sql
