[tool.poetry]
name = "mockbase"
version = "0.1.0"
description = "mock database for table aggregator project & fake data generator"
authors = ["nick.novikov"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
